--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,4 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest --cov-report term --cov=foobar
-after_success:
-  - codecov
+  - pytest tests/
