--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ attrs==20.3.0
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+coverage==5.5
 DateTime==4.3
 flake8==3.9.0
 Flask==1.1.2
@@ -19,6 +20,7 @@ pycodestyle==2.7.0
 pyflakes==2.3.0
 pyparsing==2.4.7
 pytest==6.2.2
+pytest-cov==2.11.1
 pytz==2021.1
 requests==2.25.1
 toml==0.10.2
