--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
 script:
   - pytest --cov-report=html --cov=soliddisco tests/
 after_success:
-  - codecov
+  - bash <(curl -s https://codecov.io/bash)
