--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+alabaster==0.7.12
 attrs==20.3.0
+Babel==2.9.0
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 coverage==5.5
 DateTime==4.3
+docutils==0.16
 flake8==3.9.0
 Flask==1.1.2
 idna==2.10
+imagesize==1.2.0
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -18,11 +22,20 @@ pluggy==0.13.1
 py==1.10.0
 pycodestyle==2.7.0
 pyflakes==2.3.0
+Pygments==2.8.1
 pyparsing==2.4.7
 pytest==6.2.2
 pytest-cov==2.11.1
 pytz==2021.1
 requests==2.25.1
+snowballstemmer==2.1.0
+Sphinx==3.5.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 toml==0.10.2
 urllib3==1.26.4
 Werkzeug==1.0.1
